--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,21 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="text">"Text"</string>
+    <string name="text_field">"TextField"</string>
+    <string name="buttons">"Buttons"</string>
+    <string name="progress_circle">"Progress"</string>
+    <string name="alertdialog">"Alert Dialog"</string>
+    <string name="email">"Email"</string>
+    <string name="button_text">"This is a Button"</string>
+    <string name="first">"first"</string>
+    <string name="second">"second"</string>
+    <string name="third">"third"</string>
+    <string name="confirm">"Confirm"</string>
+    <string name="alert_dialog_text">"Jetpack Compose Alert Dialog!"</string>
+    <string name="alert_dialog_title">"Alert Dialog"</string>
+    <string name="favourite">"Favourite"</string>
+
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
